Social Login 완성
와씨...Firebase 개쩌네?

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-  REACT_APP_API_KEY= "AIzaSyBzuTvnpGDt3RTaxZhErZdyXXXq0xp1rcs",
-  REACT_APP_AUTH_DOMAIN= "nwitter-2d5bd.firebaseapp.com",
-  REACT_APP_PROJECT_ID= "nwitter-2d5bd",
-  REACT_APP_STORAGE_BUCKET= "nwitter-2d5bd.appspot.com",
-  REACT_APP_MESSAGING_SENDER_ID= "1068114632436",
-  REACT_APP_APP_ID= "1:1068114632436:web:779c7d28a3ebee934908a1",
-  REACT_APP_MEASUREMENT_ID= "G-7P1NF1F91V",
+REACT_APP_API_KEY= "AIzaSyBzuTvnpGDt3RTaxZhErZdyXXXq0xp1rcs"
+REACT_APP_AUTH_DOMAIN= "nwitter-2d5bd.firebaseapp.com"
+REACT_APP_PROJECT_ID= "nwitter-2d5bd"
+REACT_APP_STORAGE_BUCKET= "nwitter-2d5bd.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID= "1068114632436"
+REACT_APP_APP_ID= "1:1068114632436:web:779c7d28a3ebee934908a1"
+REACT_APP_MEASUREMENT_ID= "G-7P1NF1F91V"
